--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,12 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# switch panes using Option-hjkl without prefix
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse
 
@@ -67,9 +73,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # theme
-set -g @themepack 'powerline/block/red'
+set -g @themepack 'powerline/double/cyan'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
